2003-05-14    <drew@loki.sai-office>

	* SkunkWeb/swpython.py.in: fixed it so that __name__ == '__main__' 
	in python scripts

2003-05-14  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/containers/fieldcontainer.py: corrected incorrect
	way of checking for presence of subclassable types.

2003-05-13  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/form.py (CompositeField.__init__): removed
	redundant setting of setable attribute.

	* test/formlib/htdocs/testCompositeField.pyinc: fixed broken import.

	* pylibs/formlib/form.py (CompositeField._setData): typo fix


2003-05-12  Jacob Smullyan  <smulloni@smullyan.org>

	* 3.4b3 release cut.

	* NEWS: updated.

	* docs/stmlrefer/stmlrefer.tex (subsection{Using the
	\texttt{duration} argument}): fixing incorrect import statement.

	* SkunkWeb/sw.conf.in: added comment about runInForeground.

2003-05-09  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/SendmailTag.py
	(SendmailTag.genCode): modified to support the extended keyword
	arguments introduced in Frank Tegtmeyer's patch to MailServices.

	* pylibs/ccvalidate.py: a module for verifying the format
	of credit card numbers.

2003-05-08    <drew@loki.sai-office>

	* SkunkWeb/util/precompile.py.in (func): now continues if a
	compilation fails

	* SkunkWeb/swpython.py.in (SkunkWebPath): now ignores sigchild by
	default like regular python does

	* configure.in: now fails and exits if python is not found

	* SkunkWeb/SkunkWeb/Server.py (addService): fix for HP/UX because it 
	doesn't have seteuid

	* SkunkWeb/swmgr.in: put quotes around $FAST to fix shell errors
	and uses @SHELL@ instead of @BASH@ (not all of us are that
	fortunate to be working on working OS's)

2003-05-07    <drew@loki.sai-office>

	* pylibs/AE/Cache.py (_dtCompileFunc): added noTagDebug option

2003-05-06  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/jsutils.py: added simple module for marshalling
	literal Python data into Javascript.
